--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,13 @@ version: '3.4'
 services:
   djangodevenv:
     image: djangodevenv
+    container_name: djangodevenv
     build:
       context: .
       dockerfile: ./Dockerfile
-    command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 manage.py runserver 0.0.0.0:8000 --nothreading --noreload --settings=web_project.envs.dev_local"]
+    command: >
+      sh -c "pip install debugpy -t /tmp && 
+      python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 manage.py runserver 0.0.0.0:8000 --nothreading --noreload --settings=web_project.envs.dev_local"
     ports:
       - 8000:8000
       - 5678:5678
