--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       context: .
       dockerfile: ./Dockerfile
     command: >
-      sh -c "pip install debugpy -t /tmp && 
+      sh -c "python manage.py migrate &&
+      pip install debugpy -t /tmp && 
       python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 manage.py runserver 0.0.0.0:8000 --nothreading --noreload --settings=web_project.envs.dev_local"
     ports:
       - 8000:8000
